kubernetes/service-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pod-hello-world

spec:
  selector:
    app: pod-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
